# target-clickhouse

./: .env.example  LICENSE  README.md  meltano.yml  pyproject.toml  requirements.txt
load/: table_config.json
target_clickhouse/: __init__.py  __main__.py  catalog.py  sinks.py  target.py
tests/: test_core.py
